logs/dag_id=postgres_pipeline/run_id=scheduled__2025-04-08T19:58:00+00:00/task_id=create_fact_table/attempt=1.log
[2025-04-08T19:59:50.280+0000] {local_task_job_runner.py:123} INFO - ::group::Pre task execution logs
[2025-04-08T19:59:50.290+0000] {taskinstance.py:2614} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: postgres_pipeline.create_fact_table scheduled__2025-04-08T19:58:00+00:00 [queued]>
[2025-04-08T19:59:50.295+0000] {taskinstance.py:2614} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: postgres_pipeline.create_fact_table scheduled__2025-04-08T19:58:00+00:00 [queued]>
[2025-04-08T19:59:50.295+0000] {taskinstance.py:2867} INFO - Starting attempt 1 of 1
[2025-04-08T19:59:50.302+0000] {taskinstance.py:2890} INFO - Executing <Task(PythonOperator): create_fact_table> on 2025-04-08 19:58:00+00:00
[2025-04-08T19:59:50.309+0000] {standard_task_runner.py:104} INFO - Running: ['***', 'tasks', 'run', 'postgres_pipeline', 'create_fact_table', 'scheduled__2025-04-08T19:58:00+00:00', '--job-id', '781', '--raw', '--subdir', 'DAGS_FOLDER/dag_postgres.py', '--cfg-path', '/tmp/tmpdufr010b']
[2025-04-08T19:59:50.317+0000] {standard_task_runner.py:105} INFO - Job 781: Subtask create_fact_table
[2025-04-08T19:59:50.323+0000] {logging_mixin.py:190} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:70 DeprecationWarning: This process (pid=15277) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2025-04-08T19:59:50.326+0000] {standard_task_runner.py:72} INFO - Started process 15282 to run task
[2025-04-08T19:59:50.372+0000] {task_command.py:467} INFO - Running <TaskInstance: postgres_pipeline.create_fact_table scheduled__2025-04-08T19:58:00+00:00 [running]> on host 970813cff045
[2025-04-08T19:59:50.436+0000] {taskinstance.py:3134} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='postgres_pipeline' AIRFLOW_CTX_TASK_ID='create_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2025-04-08T19:58:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2025-04-08T19:58:00+00:00'
[2025-04-08T19:59:50.437+0000] {taskinstance.py:732} INFO - ::endgroup::
[2025-04-08T19:59:50.455+0000] {base.py:84} INFO - Retrieving connection 'postgres_local'
[2025-04-08T19:59:50.463+0000] {taskinstance.py:3313} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 768, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 734, in _execute_callable
    return ExecutionCallableRunner(
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 424, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 238, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 256, in execute_callable
    return runner.run(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/load_to_postgres.py", line 98, in create_count_bikes_table
    cursor.execute("""
psycopg2.errors.SyntaxError: syntax error at or near "general_cnt_bike"
LINE 10:             general_cnt_bike INT NOT NULL,
                     ^

[2025-04-08T19:59:50.471+0000] {taskinstance.py:1226} INFO - Marking task as FAILED. dag_id=postgres_pipeline, task_id=create_fact_table, run_id=scheduled__2025-04-08T19:58:00+00:00, execution_date=20250408T195800, start_date=20250408T195950, end_date=20250408T195950
[2025-04-08T19:59:50.493+0000] {taskinstance.py:341} INFO - ::group::Post task execution logs
[2025-04-08T19:59:50.495+0000] {standard_task_runner.py:124} ERROR - Failed to execute job 781 for task create_fact_table (syntax error at or near "general_cnt_bike"
LINE 10:             general_cnt_bike INT NOT NULL,
                     ^
; 15282)
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/task/task_runner/standard_task_runner.py", line 117, in _start_by_fork
    ret = args.func(args, dag=self.dag)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/cli_config.py", line 49, in command
    return func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/cli.py", line 116, in wrapper
    return f(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 483, in task_run
    task_return_code = _run_task_by_selected_method(args, _dag, ti)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 256, in _run_task_by_selected_method
    return _run_raw_task(args, ti)
           ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 341, in _run_raw_task
    return ti._run_raw_task(
           ^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/session.py", line 97, in wrapper
    return func(*args, session=session, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3006, in _run_raw_task
    return _run_raw_task(
           ^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 274, in _run_raw_task
    TaskInstance._execute_task_with_callbacks(
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3161, in _execute_task_with_callbacks
    result = self._execute_task(context, task_orig)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3185, in _execute_task
    return _execute_task(self, context, task_orig)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 768, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 734, in _execute_callable
    return ExecutionCallableRunner(
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 424, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 238, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 256, in execute_callable
    return runner.run(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/load_to_postgres.py", line 98, in create_count_bikes_table
    cursor.execute("""
psycopg2.errors.SyntaxError: syntax error at or near "general_cnt_bike"
LINE 10:             general_cnt_bike INT NOT NULL,
                     ^

[2025-04-08T19:59:50.514+0000] {local_task_job_runner.py:266} INFO - Task exited with return code 1
[2025-04-08T19:59:50.525+0000] {local_task_job_runner.py:245} INFO - ::endgroup::
